--- a/src/main/resources/templates/alarm/InquireAlarmList.html
+++ b/src/main/resources/templates/alarm/InquireAlarmList.html
@@ -31,10 +31,6 @@
                     새 좋아요 알림
                     <span th:text="${newLikesAlarmList.size()}">0</span>
                 </a>
-                <a href="#" th:if="${newChatAlarmList.size() > 0}" class="list-group-item list-group-item-action d-flex justify-content-between align-items-center">
-                    새 채팅 알림
-                    <span th:text="${newChatAlarmList.size()}">0</span>
-                </a>
             </ul>
 
             <ul class="list-group mt-4" th:if="${numberOfChecked > 0}">
@@ -42,8 +38,8 @@
                     <button type="submit" class="btn btn-outline-warning" aria-describedby="deleteHelp">
                         읽은 알림 삭제
                     </button>
-                    <small id="deleteHelp">삭제하지 않아도 한달 지난 알림은 사라집니다.</small>
                 </form>
+                <small id="deleteHelp">삭제를 안해도 한달 지난 알림은 사라집니다.</small>
             </ul>
         </div>
         <div class="col-9">
@@ -90,20 +86,6 @@
                         <div class="d-flex w-100 justify-content-between">
                             <small class="text-muted"><span th:text="${likesAlarm.sender}" style="color: #0090F9"></span>님이 [[${likesAlarm.message}]]</small>
                             <small class="fromNow text-muted" th:text="${likesAlarm.diffCreatedAt}"></small>
-                        </div>
-                    </a>
-                </ul>
-            </div>
-
-            <div class="card mt-4" th:if="${newChatAlarmList.size() > 0}">
-                <div class="card-header">
-                    나의 댓글에 좋아요가 눌렸습니다.
-                </div>
-                <ul class="list-group list-group-flush">
-                    <a th:href="@{${chatAlarm.link}}" th:each="chatAlarm : ${newChatAlarmList}" class="list-group-item list-group-item-action">
-                        <div class="d-flex w-100 justify-content-between">
-                            <small class="text-muted"><span th:text="${chatAlarm.sender}" style="color: #0090F9"></span>님이 [[${chatAlarm.message}]]</small>
-                            <small class="fromNow text-muted" th:text="${chatAlarm.diffCreatedAt}"></small>
                         </div>
                     </a>
                 </ul>
