재부팅시 mongodb 테이블 drop 처리

--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="ko" xmlns:th="http://www.thymeleaf.org">
-<div th:fragment="footer">
+<div th:fragment="footer" style="position: absolute; width: 100%" >
     <br><br><br><br>
     <footer class="page-footer font-small blue" style="background: rgb(247,248,249);">
         <div class="footer-copyright text-center py-3 border-top">
