--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -65,7 +65,17 @@
                 </li>
             </ul>
         </div>
-
+    </nav>
+    <nav sec:authorize="isAuthenticated()" class="navbar navbar-expand-lg bg-light" th:if="${certifyYn eq 'N'}">
+        <div class="container" style="margin-top: 30px;">
+            <div style="float: left">
+                <p style="font-family: 'Jua', sans-serif; color :orange; font-size: 30px;">따듯한 거래를 시작해보세요~</p>
+                <small class="text-muted">지금 동네인증을 하고 안양시 동안구 근처 이웃 326,823명과 거래하세요.</small>
+            </div>
+            <div style="float: right">
+                <a href="/certify" class="btn btn-primary" style="float:right; background-color: orange; border-color: orange; color: white">동네인증하고 시작하기</a>
+            </div>
+        </div>
     </nav>
 <br><br><br><br>
 
