--- a/src/main/resources/static/css/chat.css
+++ b/src/main/resources/static/css/chat.css
@@ -43,7 +43,8 @@
     font-size: 14px;
     margin: 0;
     padding: 5px 10px 5px 12px;
-    width: 100%;
+    width: fit-content;
+    word-break: normal;
 }
 .time_date {
     color: #747474;
@@ -64,12 +65,13 @@
     font-size: 14px;
     margin: 0; color:#fff;
     padding: 5px 10px 5px 12px;
-    width:100%;
+    width:fit-content;
+    word-break: normal;
 }
 .outgoing_msg{ overflow:hidden; margin:26px 0 26px;}
 .sent_msg {
     float: right;
-    width: 60%;
+    margin-left: 320px;
 }
 .input_msg_write input {
     background: rgba(0, 0, 0, 0) none repeat scroll 0 0;
