--- a/src/main/resources/templates/chat/chat.html
+++ b/src/main/resources/templates/chat/chat.html
@@ -5,7 +5,7 @@
 <body>
 <h4 class="mb-3" style="margin-left: 560px;">채팅하기</h4><br><br>
 <div class="container" style="width: 800px;">
-    <div class="card row d-flex justify-content-center align-items-center h-100" style="padding: 30px 50px 50px 50px">
+    <div class="card row d-flex justify-content-center align-items-center h-100" style="padding: 30px 50px 50px 50px;">
         <div style="margin-bottom: 50px;">
             <img th:src="${chatInfo.boardImage}" alt="boardImage" style="width: 50px; height: 50px"/>
             <span class="card-title" th:text="${chatInfo.boardTitle}" style="font-size: 25px;"></span><br>
@@ -17,7 +17,7 @@
                     <span id="username" th:text="${chatInfo.receiverName}" style="color: #FFA500; font-weight: bold"></span>님과의 대화입니다.<br>
                     <small class="text-muted">보통 10분이내 응답</small>
                 </div>
-                <div class="container-fluid chat_section" id="chat-box">
+                <div class="container-fluid chat_section" id="chat-box" style="overflow: auto; height: 800px;">
 
                 </div>
                 <div class="type_msg">
