--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -43,8 +43,8 @@
                     </a>
                     <ul class="dropdown-menu">
                         <li><a class="dropdown-item" href="/board/new"><img src="https://img.icons8.com/ios/24/000000/add-to-collection--v2.png" alt="new"/> 물건 등록</a></li>
-                        <li><a class="dropdown-item" href="#"><img src="https://img.icons8.com/ios/24/000000/land-sales.png" alt="sale"/> 판매 내역</a></li>
-                        <li><a class="dropdown-item" href="#"><img src="https://img.icons8.com/material-outlined/24/000000/shopping-cart--v1.png" alt="buy"/> 구매 내역</a></li>
+                        <li><a class="dropdown-item" href="/saleList"><img src="https://img.icons8.com/ios/24/000000/land-sales.png" alt="sale"/> 판매 내역</a></li>
+                        <li><a class="dropdown-item" href="/purchaseList"><img src="https://img.icons8.com/material-outlined/24/000000/shopping-cart--v1.png" alt="buy"/> 구매 내역</a></li>
                         <li><a class="dropdown-item" href="/attentionList"><img src="https://img.icons8.com/ios/24/000000/novel--v1.png" alt="attention"/> 관심목록</a></li>
                     </ul>
                 </li>
