--- a/src/main/resources/templates/sale/InquireSaleOnList.html
+++ b/src/main/resources/templates/sale/InquireSaleOnList.html
@@ -7,11 +7,11 @@
     <div class="row py-5">
         <div class="col-3">
             <ul class="list-group mt-4">
-                <a href="#" class="list-group-item list-group-item-action d-flex justify-content-between align-items-center">
+                <a href="/saleList/saleOn" class="list-group-item list-group-item-action d-flex justify-content-between align-items-center active">
                     판매중
                     <span th:text="${numberOfSaleOn}">3</span>
                 </a>
-                <a href="#" class="list-group-item list-group-item-action d-flex justify-content-between align-items-center">
+                <a href="/saleList/saleComp" class="list-group-item list-group-item-action d-flex justify-content-between align-items-center">
                     판매 완료
                     <span th:text="${numberOfSaleComp}">0</span>
                 </a>
