키워드 등록 및 삭제 구현

--- a/src/main/resources/templates/attention/InquireAttentionList.html
+++ b/src/main/resources/templates/attention/InquireAttentionList.html
@@ -25,9 +25,9 @@
                                 <small style="font-weight: bold; font-size: 20px;" th:text="${attention.boardStatus.getValue()}"></small><br>
                                 <div style="margin-top: 8px;">
                                     <img src="https://img.icons8.com/external-anggara-detail-outline-anggara-putra/20/000000/external-chatting-support-anggara-detail-outline-anggara-putra-2.png"/>
-                                    <small class="text-muted" style="" th:text="${attention.attentionCnt}"></small>&nbsp;
+                                    <small class="text-muted" style="" th:text="${attention.chatRoomCnt}"></small>&nbsp;
                                     <img id="heart-white" src="https://img.icons8.com/ios/20/000000/novel--v1.png"/>
-                                    <small class="text-muted" style="" th:text="${attention.chatRoomCnt}"></small>
+                                    <small class="text-muted" style="" th:text="${attention.attentionCnt}"></small>
                                 </div>
                             </div>
                         </div>
