--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -51,24 +51,25 @@
                 </li>
                 <li sec:authorize="isAuthenticated()" class="nav-item">
                     <a class="nav-link" href="/chatList" role="button">
-                        <img th:if="${!hasChatNotification}" src="https://img.icons8.com/external-anggara-detail-outline-anggara-putra/32/000000/external-chatting-support-anggara-detail-outline-anggara-putra-2.png"/>
-                        <img th:if="${hasChatNotification}" src="https://img.icons8.com/external-anggara-blue-anggara-putra/32/000000/external-chatting-support-anggara-blue-anggara-putra-2.png"/>
+                        <img th:if="${!hasChatNotification}" src="https://img.icons8.com/external-anggara-detail-outline-anggara-putra/32/000000/external-chatting-support-anggara-detail-outline-anggara-putra-2.png" alt="chatNotification"/>
+                        <img th:if="${hasChatNotification}" src="https://img.icons8.com/external-anggara-blue-anggara-putra/32/000000/external-chatting-support-anggara-blue-anggara-putra-2.png" alt="notChatNotification"/>
                     </a>
                 </li>
                 <li id="activityAlarm" sec:authorize="isAuthenticated()" class="nav-item dropdown alarmClass">
                     <a id="alarmBtn" class="nav-link alarmClass" href="#" role="button" data-bs-toggle="dropdown">
-                        <img id="notHasAlarm" th:if="${!hasActivityAlarm}" src="https://img.icons8.com/external-anggara-outline-color-anggara-putra/32/000000/external-notification-basic-user-interface-anggara-outline-color-anggara-putra.png" alt="activityAlarm" class="alarmClass"/>
-                        <img id="hasAlarm" th:if="${hasActivityAlarm}" src="https://img.icons8.com/external-anggara-blue-anggara-putra/32/000000/external-notification-basic-user-interface-anggara-blue-anggara-putra.png" alt="newActivityAlarm" class="alarmClass"/>
+                        <img id="notHasAlarm" class="alarmClass" th:if="${!hasActivityAlarm}" src="https://img.icons8.com/external-anggara-outline-color-anggara-putra/32/000000/external-notification-basic-user-interface-anggara-outline-color-anggara-putra.png" alt="activityAlarm"/>
+                        <img id="hasAlarm" class="alarmClass" th:if="${hasActivityAlarm}" src="https://img.icons8.com/external-anggara-blue-anggara-putra/32/000000/external-notification-basic-user-interface-anggara-blue-anggara-putra.png" alt="newActivityAlarm"/>
                     </a>
                     <ul id="activityAlarmList" class="dropdown-menu list-group list-group-flush" style="overflow:auto; height: 700px; width: 420px; display: none">
 
                     </ul>
                 </li>
-                <li sec:authorize="isAuthenticated()" class="nav-item dropdown">
-                    <a class="nav-link" href="#" role="button" data-bs-toggle="dropdown">
-                        <img src="https://img.icons8.com/ios/32/000000/tags--v1.png" alt="tags"/>
+                <li id="keywordAlarm" sec:authorize="isAuthenticated()" class="nav-item dropdown keywordAlarmClass">
+                    <a id="keywordAlarmBtn" class="nav-link keywordAlarmClass" href="#" role="button" data-bs-toggle="dropdown">
+                        <img id="notHasKeywordAlarm" class="keywordAlarmClass" th:if="${!hasKeywordAlarm}" src="https://img.icons8.com/external-anggara-outline-color-anggara-putra/32/000000/external-tag-basic-user-interface-anggara-outline-color-anggara-putra.png" alt="keywordAlarm"/>
+                        <img id="hasKeywordAlarm" class="keywordAlarmClass" th:if="${hasKeywordAlarm}" src="https://img.icons8.com/external-anggara-blue-anggara-putra/32/000000/external-tag-basic-user-interface-anggara-blue-anggara-putra.png" alt="newKeywordAlarm"/>
                     </a>
-                    <ul id="keywordList" class="dropdown-menu list-group list-group-flush" style="overflow:auto; height: 700px; width: 420px; display: none">
+                    <ul id="keywordAlarmList" class="dropdown-menu list-group list-group-flush" style="overflow:auto; height: 700px; width: 420px; display: none">
 
                     </ul>
                 </li>
@@ -97,6 +98,11 @@
            if(!$(e.target).hasClass("alarmClass")) {
                $("#activityAlarmList").css("display", "none");
            }
+
+           if(!$(e.target).hasClass("keywordAlarmClass")) {
+               $("#keywordAlarmList").css("display", "none");
+           }
+
         });
 
         $("#hasAlarm").on('click', function () {
@@ -106,8 +112,15 @@
             );
         });
 
-        $("#activityAlarm").on('click', function () {
+        $("#hasKeywordAlarm").on('click', function () {
+           $("#hasKeywordAlarm").remove();
+           $("#keywordAlarmBtn").append(
+             "<img id=\"notHasKeywordAlarm\" class=\"keywordAlarmClass\" src=\"https://img.icons8.com/external-anggara-outline-color-anggara-putra/32/000000/external-tag-basic-user-interface-anggara-outline-color-anggara-putra.png\" alt=\"keywordAlarm\"/>"
+           );
+        });
 
+
+        $("#activityAlarm").on('click', function () {
             $("#activityAlarmList").css("display", "");
 
             $.ajax({
@@ -118,7 +131,7 @@
                     $("#activityAlarmList").empty();
                     $("#activityAlarmList").append(
                         "<div style='height: 30px; vertical-align: middle;'>" +
-                            "<span style='float: left; margin-left: 13px; line-height: 40px;'>알림</span>" +
+                            "<span style='float: left; margin-left: 13px; line-height: 40px;'>활동알림</span>" +
                             "<span style='float: right; margin-right: 13px; line-height: 28px;'><a href='/activityAlarmList'><img src=\"https://img.icons8.com/ios/28/000000/search-in-list.png\"/></a></span>" +
                         "</div>" +
                         "<hr>"
@@ -136,7 +149,7 @@
                         $("#activityAlarmList").append(
                             "<li>" +
                                 "<a href=\"" + activityAlarm.link + "\" class=\"dropdown-item list-group-item-action\" id=\"activityAlarm-" + activityAlarm.id + "\" onclick='alarmClick(this)'>" +
-                                    "<div style='float:left; display: inline-block; margin-right: 5px; margin-top: 10px;'>" +
+                                    "<div style='float:left; display: inline-block; margin-right: 10px; margin-top: 10px;'>" +
                                         clickYnTag +
                                     "</div>" +
                                     "<div style='display: inline-block'>" +
@@ -146,12 +159,59 @@
                                 "</a>" +
                             "</li>" +
                             "<hr>"
-
                         )
                     })
                 }
             });
         });
+
+
+        $("#keywordAlarm").on('click', function () {
+            $("#keywordAlarmList").css("display", "");
+
+            $.ajax({
+                url: "/keywordAlarmList/show.do",
+                type: "get",
+                sync: false,
+                success: function (keywordAlarmList) {
+                    $("#keywordAlarmList").empty().append(
+                        "<div style='height: 30px; vertical-align:middle;'>" +
+                            "<span style='float: left; margin-left: 13px; line-height: 40px;'>키워드알림</span>" +
+                        "</div>" +
+                        "<hr>"
+                    );
+                    $.each(keywordAlarmList, function (index, keywordAlarm) {
+                       let clickYnTag;
+
+                       if (keywordAlarm.clickYn === "Y") {
+                           clickYnTag = "<div id='circle2'></div>";
+                       } else {
+                           clickYnTag = "<div id='circle1'></div>";
+                       }
+
+                       $("#keywordAlarmList").append(
+                            "<li>" +
+                                "<a href=\"" + keywordAlarm.link + "\" class=\"dropdown-item list-group-item-action\" id=\"keyAlarm-" + keywordAlarm.id + "\" onclick='keywordAlarmClick(this)'>" +
+                                    "<div style='float:left; display: inline-block; margin-right: 10px; margin-top: 10px;'>" +
+                                        clickYnTag +
+                                    "</div>" +
+                                    "<div>" +
+                                        "<img src=\"" + keywordAlarm.boardImage + "\" style='width: 80px; height: 80px; float: left; display: inline-block'>" +
+                                        "<div style='margin-top: 15px; margin-left: 20px; display: inline-block'>" +
+                                            "<p style='display: inline-block; font-weight: bolder'>" + keywordAlarm.keyword + " -" +  "</p>" + " <p style='display: inline-block'>" + keywordAlarm.boardTitle + "</p><br>" +
+                                            "<small class='text-muted'>" + keywordAlarm.areaName + "</small>" +  " · " +
+                                            "<small class='text-muted'>" + keywordAlarm.diffCreatedAt + "</small>" +
+                                        "</div>" +
+                                    "</div>" +
+                               "</a>" +
+                           "</li>" +
+                           "<hr>"
+                       )
+                    });
+                }
+            });
+        })
+
 
         function alarmClick(activityAlarm) {
             let alarmId = activityAlarm.id.toString().substring(14);
@@ -160,6 +220,16 @@
                 type:"post",
                 sync: false,
                 data: {"alarmId" : alarmId}
+            });
+        }
+
+        function keywordAlarmClick(keywordAlarm) {
+            let keywordAlarmId = keywordAlarm.id.toString().substring(9);
+            $.ajax({
+                url: "/keywordAlarmList/click.do",
+                type: "post",
+                sync: false,
+                data: {"keywordAlarmId" : keywordAlarmId}
             });
         }
 
